Set the distribution property based on product info, and add the betanag dialog.

--- a/pyanaconda/ui/gui/hubs/summary.ui
+++ b/pyanaconda/ui/gui/hubs/summary.ui
@@ -9,7 +9,7 @@
     <property name="startup_id">filler</property>
     <property name="mnemonics_visible">False</property>
     <property name="focus_visible">False</property>
-    <property name="distribution">FEDORA 17 INSTALLATION</property>
+    <property name="distribution">DISTRIBUTION INSTALLATION</property>
     <property name="window_name">INSTALL SUMMARY</property>
     <child internal-child="action_area">
       <object class="GtkVBox" id="summaryWindow-actionArea">
