--- a/pyanaconda/ui/gui/spokes/language.ui
+++ b/pyanaconda/ui/gui/spokes/language.ui
@@ -162,7 +162,7 @@
     <property name="startup_id">filler</property>
     <property name="mnemonics_visible">False</property>
     <property name="focus_visible">False</property>
-    <property name="distribution">FEDORA 17 INSTALLATION</property>
+    <property name="distribution">DISTRIBUTION INSTALLATION</property>
     <property name="window_name">KEYBOARD LAYOUT</property>
     <signal name="back-clicked" handler="on_back_clicked" swapped="no"/>
     <child internal-child="action_area">
