--- a/pyanaconda/ui/gui/spokes/upgrade.ui
+++ b/pyanaconda/ui/gui/spokes/upgrade.ui
@@ -7,7 +7,7 @@
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
     <property name="startup_id">filler</property>
-    <property name="distribution">FEDORA 17 INSTALLATION</property>
+    <property name="distribution">DISTRIBUTION INSTALLATION</property>
     <property name="window_name">UPGRADE NOTICE</property>
     <child internal-child="action_area">
       <object class="GtkVBox" id="languageWindow-actionArea">
