--- a/pyanaconda/ui/gui/spokes/language.ui
+++ b/pyanaconda/ui/gui/spokes/language.ui
@@ -166,8 +166,9 @@
     <property name="window_name">KEYBOARD LAYOUT</property>
     <signal name="back-clicked" handler="on_back_clicked" swapped="no"/>
     <child internal-child="action_area">
-      <object class="GtkVBox" id="languageWindow-actionArea">
+      <object class="GtkBox" id="languageWindow-actionArea">
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkAlignment" id="alignment1">
@@ -180,6 +181,7 @@
               <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_top">12</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <child>
@@ -203,7 +205,7 @@ any layout to the top of the list to select it as the default.</property>
                   <object class="GtkBox" id="box2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="spacing">6</property>
+                    <property name="spacing">12</property>
                     <child>
                       <object class="GtkBox" id="leftSideBox">
                         <property name="visible">True</property>
