--- a/pyanaconda/ui/gui/spokes/software.ui
+++ b/pyanaconda/ui/gui/spokes/software.ui
@@ -30,8 +30,9 @@
     <property name="window_name">SOFTWARE SELECTION</property>
     <signal name="back-clicked" handler="on_back_clicked" swapped="no"/>
     <child internal-child="action_area">
-      <object class="GtkVBox" id="softwareWindow-actionArea">
+      <object class="GtkBox" id="softwareWindow-actionArea">
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkAlignment" id="alignment1">
@@ -44,6 +45,7 @@
               <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_top">12</property>
                 <property name="spacing">12</property>
                 <property name="homogeneous">True</property>
                 <child>
