--- a/pyanaconda/ui/gui/spokes/source.ui
+++ b/pyanaconda/ui/gui/spokes/source.ui
@@ -223,14 +223,17 @@
     <property name="window_name">INSTALL SOURCE</property>
     <signal name="back-clicked" handler="on_back_clicked" swapped="no"/>
     <child internal-child="action_area">
-      <object class="GtkVBox" id="sourceWindow-actionArea">
+      <object class="GtkBox" id="sourceWindow-actionArea">
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
           <object class="GtkAlignment" id="alignment1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="yalign">0</property>
             <property name="xscale">0</property>
+            <property name="yscale">0.5</property>
             <child>
               <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
